# KPO_KR_3

./: .coverage  README.md  docker-compose.yml
api_gateway/: nginx.conf
order_service/: .coverage  Dockerfile  pyproject.toml
order_service/src/: dependencies.py  main.py  routes.py
order_service/src/app/: order.py  status.py
order_service/src/infra/: exceptions.py  postgres_repository.py
order_service/src/infra/data/: base.py  database.py  order.py  outbox.py
order_service/src/infra/services/: consumer.py  order_service.py  outbox_publisher.py  producer.py
order_service/tests/: conftest.py  consumer_test.py  dependencies_test.py  orders_service_test.py  outbox_publish_test.py  producer_test.py  repository_test.py
payment_service/: .coverage  Dockerfile  pyproject.toml
payment_service/src/: dependencies.py  main.py  routes.py
payment_service/src/app/: account.py  event_type.py  payment_status.py  schemas.py
payment_service/src/infra/: exceptions.py  postgres_repository.py
payment_service/src/infra/data/: account.py  base.py  database.py  inbox.py  outbox.py
payment_service/src/infra/services/: consumer.py  outbox_publisher.py  payment_service.py  producer.py  worker_service.py
payment_service/tests/: conftest.py  consumer_test.py  outbox_publisher_test.py  payment_service_test.py  producer_test.py  repository_test.py  worker_service_test.py
